Styled home page to fit on tablets fixed issue with header as well

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,31 +13,30 @@ body {
     display: flex;
     flex-direction: column;
     background-color: rgb(0, 0, 0);
-    
+
 
 }
 
 h1 {
-        font-family: 'Cinzel', serif;
-        text-decoration: solid;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        color: #971111;
-        width: 120%;
-        font-size: 20px;
-        background-color: black;
-        text-align: center;
-        
+    font-family: 'Cinzel', serif;
+    text-decoration: solid;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #971111;
+    font-size: 20px;
+    text-align: center;
+
 }
 
-h2,h3 {
-        font-family: 'Cinzel', serif;
-        text-decoration: solid;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        color: #971111;
-        
-        
+h2,
+h3 {
+    font-family: 'Cinzel', serif;
+    text-decoration: solid;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: #971111;
+
+
 }
 
 header {
@@ -47,6 +46,7 @@ header {
     align-items: baseline;
     top: 100;
     z-index: 99;
+    background-color: black;
     width: 100%;
 }
 
@@ -71,11 +71,11 @@ nav {
     width: 100%;
     left: 0;
     background-color: black;
-    box-shadow: 2px 2px  rgb(255, 255, 255);
+    box-shadow: 2px 2px rgb(255, 255, 255);
     display: none;
-    
 
-} 
+
+}
 
 
 
@@ -158,8 +158,8 @@ main {
 }
 
 #safety-vid a {
-    
-    color:white;
+
+    color: white;
     align-self: center;
     padding: 0 10px;
 }
@@ -170,42 +170,37 @@ main {
     display: flex;
     justify-content: space-between;
     font-size: 150%;
-    padding-top:16px;
+    padding-top: 16px;
     list-style-type: none;
-    
+
 
 }
 
-#social-networks > li {
+#social-networks>li {
     padding-right: 10px;
 }
 
 
-#social-networks :hover{
-    background-color: red;
-    width: 40px;
-    height: 20px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    color: #fff;
-    
-}
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
     h1 {
-        font-size: 100%;
-        
+        font-size: 30px;
+
+
     }
 
     nav {
-        display: block;
+        display: flex;
         position: relative;
         width: fit-content;
         padding-left: 255px;
         letter-spacing: 4px;
         box-shadow: none;
+        width: 100%;
+        justify-content: right;
 
     }
 
@@ -213,8 +208,8 @@ main {
         display: flex;
     }
 
-    #menu > li {
-        
+    #menu>li {
+
         padding-left: 1rem;
 
     }
@@ -227,7 +222,7 @@ main {
         margin-top: 79px;
     }
 
-    
+
 
     #cover-text {
         width: 40%;
@@ -235,20 +230,42 @@ main {
         font-size: 70%;
     }
 
+    #about-text {
+
+        width: 100%;
+
+    }
+
+    .safety-text {
+        width: 100%;
+        padding-top: 15px;
+    }
+
+    #safety-vid video {
+        width: 100%;
+        height: 200px;
+        align-self: center;
+        padding-top: 15px
+    }
+
+    #safety-vid a {
+        font-size: 10px;
+    }
+
     #social-networks {
         font-size: 200%;
     }
 
-        #social-networks :hover {
-            background-color: red;
-            width: 40px;
-            height: 20px;
-            border-radius: 50%;
-            color: #fff;
-    
-        }
+    #social-networks :hover {
+        background-color: rgb(255, 255, 255);
+        width: 40px;
+        height: 20px;
+        border-radius: 50%;
+        color: #fff;
 
-    
+    }
+
+
 
 
 
